[gd_scene load_steps=11 format=3 uid="uid://cdict4sdap4ha"]

[ext_resource type="Script" path="res://scripts/undead.gd" id="1_5hd2v"]
[ext_resource type="Texture2D" uid="uid://brodikbody7k1" path="res://assets/skeleton_fighter.png" id="1_gjm0i"]
[ext_resource type="Script" path="res://scripts/States/machines/UndeadStateMachine.gd" id="3_ppdv1"]
[ext_resource type="Script" path="res://scripts/States/undeadStates/UndeadSurroundState.gd" id="4_1fdv1"]
[ext_resource type="Script" path="res://scripts/States/undeadStates/UndeadIdleState.gd" id="5_iql04"]
[ext_resource type="Script" path="res://scripts/States/undeadStates/UndeadFollowState.gd" id="6_un20k"]
[ext_resource type="Script" path="res://scripts/States/undeadStates/UndeadMoveState.gd" id="7_8ledc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xd3bj"]
radius = 8.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t7xom"]
radius = 48.0
height = 176.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yut1k"]
radius = 472.271

[node name="Undead" type="CharacterBody2D" groups=["undead"]]
y_sort_enabled = true
position = Vector2(0, -16)
script = ExtResource("1_5hd2v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 16)
scale = Vector2(0.8125, 0.8125)
texture = ExtResource("1_gjm0i")
offset = Vector2(0, -49.2308)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xd3bj")

[node name="UndeadStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("3_ppdv1")
CURRENT_STATE = NodePath("UndeadFollowState")

[node name="UndeadSurroundState" type="Node" parent="UndeadStateMachine"]
script = ExtResource("4_1fdv1")

[node name="UndeadIdleState" type="Node" parent="UndeadStateMachine"]
script = ExtResource("5_iql04")

[node name="UndeadFollowState" type="Node" parent="UndeadStateMachine"]
script = ExtResource("6_un20k")

[node name="UndeadMoveState" type="Node" parent="UndeadStateMachine"]
script = ExtResource("7_8ledc")

[node name="Hurtbox" type="Area2D" parent="." groups=["undead"]]
visible = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(64, -48)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_t7xom")

[node name="AggroArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
shape = SubResource("CircleShape2D_yut1k")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -24.0
offset_top = -144.0
offset_right = 48.0
offset_bottom = -113.0
text = "asdf"

[connection signal="area_entered" from="Hurtbox" to="UndeadStateMachine/UndeadSurroundState" method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="AggroArea" to="UndeadStateMachine/UndeadFollowState" method="_on_aggro_area_body_entered"]
